--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MainDb": "Server=mouse.db.elephantsql.com;Port=5432;Database=vdiruasj;User Id=vdiruasj;Password=DjtExBYM_86d2ID4xQsyf8eJz51nh5FU;"
+  }
 }
