--- a/DataRepository/DataRepository.csproj
+++ b/DataRepository/DataRepository.csproj
@@ -14,7 +14,5 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     </ItemGroup>
 
-    <ItemGroup>
-      <Folder Include="Repositories\Implementations" />
-    </ItemGroup>
+    <Import Project="..\Dtos\Dtos.projitems" Label="Shared" />
 </Project>
