Added sub projects description

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MainDb": "Server=mouse.db.elephantsql.com;Port=5432;Database=vdiruasj;User Id=vdiruasj;Password=DjtExBYM_86d2ID4xQsyf8eJz51nh5FU;"
-  }
+  },
+  "MigrationAssembly" : "Backend"
 }
