--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "MainDb": "Server=mouse.db.elephantsql.com;Port=5432;Database=vdiruasj;User Id=vdiruasj;Password=DjtExBYM_86d2ID4xQsyf8eJz51nh5FU;"
-  }
+  },
+  "MigrationAssembly" : "Backend"
 }
