CORS, frontend skeleton

--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
+  "CorsAllowed": ["localhost:5300"],
   "ConnectionStrings": {
     "MainDb": "Server=mouse.db.elephantsql.com;Port=5432;Database=vdiruasj;User Id=vdiruasj;Password=DjtExBYM_86d2ID4xQsyf8eJz51nh5FU;"
   },
