Swap movie fix, documentation

--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "CorsAllowed": ["localhost:5300"],
+  "AllowedCrossOrigin" : [
+    "http://localhost:5300",
+    "https://localhost:5301"
+  ],
   "ConnectionStrings": {
     "MainDb": "Server=mouse.db.elephantsql.com;Port=5432;Database=vdiruasj;User Id=vdiruasj;Password=DjtExBYM_86d2ID4xQsyf8eJz51nh5FU;"
   },
