--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "start": "PORT=5300 react-scripts start",
     "start_windows": "set PORT=5300 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "PORT=5300 react-scripts build",
+    "build_windows": "set PORT=5300 && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
